[package]
name = "errortools-proc"
version = "0.1.0"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/errortools"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.109", features = ["full"] }
