[package]
name = "errortools"
version = "0.1.0"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/errortools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errortools-proc = { path = "../errortools-proc" }

[dev-dependencies]
thiserror = "1.0.39"
